--- a/components/books/Hero/styles.module.scss
+++ b/components/books/Hero/styles.module.scss
@@ -11,6 +11,7 @@ $color: #ccad004e;
     letter-spacing: 0.25px;
     font-size: 13px;
     text-align: left;
+    margin-bottom: 10px;
   }
 
   .presetContainer {
@@ -27,7 +28,6 @@ $color: #ccad004e;
   }
 
   .slideContainer {
-    padding: 10px 0;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
