--- a/components/books/BookSummary/styles.module.scss
+++ b/components/books/BookSummary/styles.module.scss
@@ -6,12 +6,15 @@
   margin: 10px;
   transition: all 0.2s ease-in-out;
   position: relative;
-  background-color: #fff;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   padding-bottom: 5px;
-  min-width: 180px;
+  min-width: 150px;
+
+  @include breakpoint(tablet) {
+    min-width: 180px;
+  }
 
   .bookCover {
     display: flex;
@@ -24,12 +27,21 @@
     }
 
     .image {
-      width: 175px;
-      min-height: 275px;
-      max-height: 275px;
+      width: 155px;
+      min-height: 240px;
+      max-height: 240px;
       margin-bottom: 10px;
       display: flex;
       justify-content: center;
+
+      @include breakpoint(tablet) {
+        width: 100%;
+        min-height: 325px;
+      }
+
+      @include breakpoint(laptop) {
+        min-height: 285px;
+      }
 
       a {
         display: flex;
@@ -37,6 +49,7 @@
         justify-content: center;
         box-shadow: -5px 2px 10px 3px rgba(0, 0, 0, 0.2);
         border-radius: 5px;
+        overflow: hidden;
       }
     }
   }
@@ -45,11 +58,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
   }
 
   .titleContainer {
-    height: 125px;
-    width: 175px;
+    height: 135px;
+    width: 100%;
+
+    @include breakpoint(tablet) {
+      height: 120px;
+    }
 
     .title {
       font-size: 1.1rem;
@@ -58,16 +76,12 @@
       font-weight: 700;
       margin-top: 0px;
       margin-bottom: 10px;
-      text-align: center;
+      text-align: left;
 
       display: -webkit-box;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
       overflow: hidden;
-
-      @include breakpoint(tablet) {
-        text-align: left;
-      }
     }
   }
 
@@ -139,14 +153,18 @@
     border-radius: 5px;
     padding: 4px 15px;
     width: max-content;
-    font-size: 12px;
-    width: 175px;
+    font-size: 13px;
+    width: 155px;
     background-color: transparent;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 
     &:hover {
       background-color: var(--gold);
+    }
+
+    @include breakpoint(tablet) {
+      width: 175px;
     }
   }
 }
