--- a/components/global/BentoSection/styles.module.scss
+++ b/components/global/BentoSection/styles.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
-  font-size: 18px;
   font-weight: 400;
   border-radius: 10px;
   margin-bottom: 30px;
@@ -21,15 +20,23 @@
       #343146
     );
     background-size: cover;
-    padding: 0 40px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    max-height: 120px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     overflow: hidden;
+
+    @include breakpoint(tablet) {
+      max-height: 120px;
+      padding: 0 30px;
+    }
+
+    @include breakpoint(laptop) {
+      padding: 0 40px;
+    }
   }
 
   .image {
@@ -54,11 +61,15 @@
     .chapter {
       color: var(--gold);
       margin-right: 10px;
-      font-size: 17px;
+      font-size: 16px;
       height: 10px;
       font-weight: 500;
       border-right: 2px solid #fff;
       padding-right: 10px;
+
+      @include breakpoint(tablet) {
+        font-size: 17px;
+      }
 
       &:last-child {
         border: none;
@@ -129,20 +140,26 @@
 
   .footer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     padding: 0 50px 30px 50px;
     background-color: #fff;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow: hidden;
+    margin-top: -1px;
+
+    @include breakpoint(tablet) {
+      justify-content: flex-end;
+      margin-top: 0;
+    }
   }
 
   button {
     background: transparent;
     border-radius: 7px;
     color: var(--violet);
-    font-size: 12px;
+    font-size: 13px;
     padding: 8px 30px;
     border: 1px solid var(--gold);
     cursor: pointer;
