--- a/components/global/ButtonPreset/styles.module.scss
+++ b/components/global/ButtonPreset/styles.module.scss
@@ -25,16 +25,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 800;
     vertical-align: bottom;
     background-color: rgb(233, 230, 253);
     color: var(--violet);
   }
-
-  // @include breakpoint(tablet) {
-  //   padding: 15px 25px;
-  // }
 
   &:hover {
     border: 2px solid #dadada;
@@ -54,9 +50,13 @@
 
   h3 {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     color: rgb(233, 230, 253);
     line-height: 1.1;
     text-transform: capitalize;
+
+    @include breakpoint(tablet) {
+      font-size: 18px;
+    }
   }
 }
