--- a/components/saint/Filter/styles.module.scss
+++ b/components/saint/Filter/styles.module.scss
@@ -8,8 +8,9 @@ $color: rgb(70, 63, 113);
       0 -1px $color;
     font-weight: 600;
     letter-spacing: 0.25px;
-    font-size: 12px;
+    font-size: 13px;
     text-align: left;
+    margin-bottom: 10px;
   }
 
   .presetContainer {
@@ -72,7 +73,6 @@ $color: rgb(70, 63, 113);
   }
 
   .slideContainer {
-    padding: 10px 0;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -88,7 +88,7 @@ $color: rgb(70, 63, 113);
     }
 
     .slide {
-      font-size: 12px;
+      font-size: 13px;
       color: #f1e1e0;
       cursor: pointer;
       display: flex;
