--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -6,6 +6,10 @@
   box-shadow: 0px 5px 20px -3px rgba(0, 0, 0, 0.1);
   padding: 10px 0;
 
+  @include breakpoint(laptop) {
+    padding: 0;
+  }
+
   .content {
     width: 90%;
     max-width: 1450px;
