--- a/components/books/Hero/styles.module.scss
+++ b/components/books/Hero/styles.module.scss
@@ -66,10 +66,10 @@ $color: #ccad004e;
         rgba(0, 0, 0, 0),
         rgba(0, 0, 0, 0.3)
       ),
-      url('/library.webp');
-    background-size: cover; /* This will cover the entire viewport */
-    background-repeat: no-repeat; /* Important if the image is smaller than the footer */
-    background-position: center 40%; /* This will center the image */
+      url('/dark_cathedral.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center 75%;
     z-index: 0;
   }
 
