fix for read more links

--- a/components/saint/PageButton/styles.module.scss
+++ b/components/saint/PageButton/styles.module.scss
@@ -10,6 +10,17 @@
     color: #fff;
   }
 
+  &:hover {
+    background-color: #3187e3;
+    border-radius: 10px;
+    color: #fff;
+  }
+
+  &.bio {
+    border: 1px solid var(--gold);
+    border-radius: 10px;
+  }
+
   font-size: 16px;
   display: flex;
   align-items: center;
