--- a/components/saint/ReadMoreLinks/styles.module.scss
+++ b/components/saint/ReadMoreLinks/styles.module.scss
@@ -8,15 +8,20 @@
   }
 
   .links {
-    cursor: pointer;
     transition: all 0.2s ease-in-out;
     border-radius: 5px;
     background-color: aliceblue;
-    padding: 15px 30px;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    a {
+      cursor: pointer;
+    }
   }
 
   .link {
-    margin-bottom: 20px;
     font-size: 1rem;
     color: var(--violet);
     font-weight: 600;
