--- a/components/global/Toggle/styles.module.scss
+++ b/components/global/Toggle/styles.module.scss
@@ -1,9 +1,12 @@
-
-
-.sortToggle {
+.sortToggleContainer {
   position: absolute;
   bottom: -57px;
-  left: calc((100% - 215px) / 2);
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.sortToggle {
   cursor: pointer;
 
   .selected {
@@ -44,7 +47,7 @@
 
     &.visible {
       opacity: 1;
-      pointer-events:all;
+      pointer-events: all;
     }
 
     ul {
@@ -64,9 +67,9 @@
 
         &:hover {
           background-color: #999;
-           cursor: pointer;
+          cursor: pointer;
         }
       }
     }
   }
-};
+}
