--- a/pages/saints/styles.module.scss
+++ b/pages/saints/styles.module.scss
@@ -1,11 +1,11 @@
 .saintHome {
   width: 90%;
   max-width: 1450px;
-  padding: 30px 0 50px 0;
+  padding: 0 0 50px 0;
 }
 
 .FilterCustomizeRow {
   display: flex;
   justify-content: center;
   width: 100%;
-};
+}
