Add link to saint summary

--- a/components/saint/SaintSummary/styles.module.scss
+++ b/components/saint/SaintSummary/styles.module.scss
@@ -125,6 +125,11 @@
     }
   }
 
+  .link {
+    color: var(--gold);
+    margin-bottom: 1rem;
+  }
+
   .footer {
     display: flex;
     justify-content: space-between;
