added organize logic

--- a/components/global/ButtonFilter/styles.module.scss
+++ b/components/global/ButtonFilter/styles.module.scss
@@ -29,9 +29,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    line-height: normal;
     font-size: 9px;
     font-weight: 700;
-    line-height: 15px;
     background-color: var(--gold);
     color: var(--violet);
   }
