added patron data

--- a/components/saint/Filter/styles.module.scss
+++ b/components/saint/Filter/styles.module.scss
@@ -72,6 +72,11 @@ $color: rgb(70, 63, 113);
     }
   }
 
+  .organizeContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
   .slideContainer {
     display: flex;
     flex-wrap: wrap;
