--- a/pages/saints/[slug]/styles.module.scss
+++ b/pages/saints/[slug]/styles.module.scss
@@ -35,6 +35,20 @@
 
       .heroText {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        justify-content: space-between;
+
+        @include breakpoint(laptopM) {
+          flex-direction: row;
+          gap: 30px;
+        }
+
+        .row1 {
+          display: flex;
+          flex-direction: column;
+        }
 
         @include breakpoint(tablet) {
           margin-top: 150px;
