--- a/components/saint/Quotes/styles.module.scss
+++ b/components/saint/Quotes/styles.module.scss
@@ -1,14 +1,30 @@
+@import '../../../styles/breakpoints.scss';
+
+.quotesContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  width: 100%;
+}
+
 .quote {
-  flex: 1;
-  border-radius: 5px;
-  padding: 25px;
-  background-color: #cceff6;
-  margin-right: 10%;
+  max-width: 100%;
+  border-radius: 10px;
+  padding: 25px 35px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+
+  @include breakpoint(tablet) {
+    max-width: 47.5%;
+    width: 47.5%;
+  }
+
+  @include breakpoint(laptopM) {
+    max-width: 31.5%;
+    width: 31.5%;
+  }
 
   .c-text {
     color: #353535;
@@ -25,21 +41,50 @@
   .footer {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 30px;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 10px;
 
-    .c-topics {
-      .topic {
-        font-size: 13px;
-        text-transform: uppercase;
+    .authorContainer {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      height: 40px;
+      margin-bottom: 0.5rem;
+
+      .profile {
+        height: 35px;
+        width: 35px;
+        min-width: 35px;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 1px solid var(--gold);
+      }
+
+      .author {
+        font-size: 0.9rem;
+        color: #222;
+        line-height: 1.1;
+        font-weight: 400;
         font-weight: 600;
-        color: #4b5658;
       }
     }
 
-    .quoteNumber {
-      font-size: 13px;
-      color: #4b5658;
+    .topics {
+      display: flex;
+      align-self: flex-end;
+      gap: 10px;
+
+      .topic {
+        padding: 2px 12px;
+        background-color: #ccebd9;
+        font-size: 12px;
+        font-weight: 500;
+        border-radius: 5px;
+        color: #54846d;
+        font-weight: 600;
+        min-width: fit-content;
+      }
     }
   }
 }
