--- a/components/saint/SaintSummary/styles.module.scss
+++ b/components/saint/SaintSummary/styles.module.scss
@@ -82,6 +82,7 @@
     border-bottom-left-radius: 20px;
     margin-top: 300px;
     overflow: hidden;
+    padding-bottom: 5px;
 
     background: linear-gradient(
       180deg,
