--- a/components/global/ButttonOrganize/styles.module.scss
+++ b/components/global/ButttonOrganize/styles.module.scss
@@ -2,13 +2,11 @@
 
 .btnOrganize {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 6px 20px;
-  align-items: center;
-  flex-wrap: wrap;
   border-radius: 7px;
   cursor: pointer;
-  gap: 20px;
+  gap: 10px;
   position: relative;
   transition: all 0.1s ease-in-out;
   background-color: #521613;
@@ -19,8 +17,10 @@
   color: var(--gold);
   line-height: 1.1;
   text-transform: capitalize;
+  color: #f1e1e0;
+  width: 140px;
 
   &.selected {
-    border: 1px solid #fff;
+    border: 1px solid #cacaca;
   }
 }
