--- a/components/page/Footer/styles.module.scss
+++ b/components/page/Footer/styles.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
   background-color: #343434;
-  height: 120px;
+  height: 180px;
   color: #fff;
   width: 100%;
   display: flex;
@@ -12,17 +12,12 @@
   position: relative;
 
   @include breakpoint(tablet) {
-    height: 90px;
-  }
-
-  @include breakpoint(laptop) {
     height: 60px;
-    margin-top: 150px;
   }
 
   &.animated {
     position: fixed;
-    bottom: -100px;
+    bottom: -180px;
   }
 
   &.inView {
@@ -30,43 +25,51 @@
   }
 
   .content {
-    width: 90%;
+    width: 85%;
     max-width: 1450px;
     margin: 20px auto;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
+    gap: 20px;
 
     @include breakpoint(tablet) {
+      width: 90%;
+      margin: 20px auto;
       flex-direction: row;
+      justify-content: space-between;
     }
 
     .left {
-      justify-content: space-between;
+      display: flex;
+      flex-direction: column;
       width: 100%;
+      height: 100%;
+      justify-content: space-between;
+      gap: 10px;
 
       @include breakpoint(tablet) {
         gap: 30px;
+        flex-direction: row;
+        justify-content: flex-start;
       }
 
-      @include breakpoint(desktop-sm) {
-        justify-content: flex-start;
+      @include breakpoint(laptop) {
         gap: 60px;
       }
     }
 
-    .center {
-      justify-content: center;
-    }
-
     .right {
-      justify-content: flex-end;
-    }
-
-    .row {
       display: flex;
       flex-direction: row;
-      flex: 1;
+      width: 100%;
+      height: 100%;
+      justify-content: flex-start;
+
+      @include breakpoint(tablet) {
+        justify-content: flex-end;
+        align-items: center;
+      }
     }
 
     a {
