--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -5,18 +5,11 @@
   flex-direction: column;
   box-shadow: 0px 5px 20px -3px rgba(0, 0, 0, 0.1);
   padding: 10px 0;
+  background: rgb(31 28 54);
 
-  @include breakpoint(laptop) {
+  @include breakpoint(tablet) {
     padding: 0;
-  }
-
-  .content {
-    width: 90%;
-    max-width: 1450px;
-    margin: 0 auto;
-    display: flex;
-    position: relative;
-    z-index: 2;
+    background: unset;
   }
 
   .row {
@@ -28,23 +21,27 @@
     }
   }
 
-  .col {
+  .content {
+    width: 90%;
+    max-width: 1450px;
+    margin: 0 auto;
+    display: flex;
+    position: relative;
+    z-index: 2;
+  }
+
+  .colLeft {
+    justify-content: flex-start;
     flex: 1;
     display: flex;
     align-items: center;
   }
 
-  .left {
-    justify-content: flex-start;
-  }
-
-  .right {
+  .colRight {
     justify-content: flex-end;
-    display: none;
-
-    @include breakpoint(laptop) {
-      display: flex;
-    }
+    flex: 1;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -53,11 +50,53 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: 50px;
 
   @include breakpoint(laptop) {
-    justify-content: unset;
     gap: 10px;
     width: unset;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 0;
+  }
+
+  &.mobileMenuOpen {
+    position: absolute;
+    height: calc(100vh + 50px);
+    width: 100vw;
+    gap: 30px;
+    left: calc(-5% - 2px);
+    top: -10px;
+    background: linear-gradient(
+      0deg,
+      rgb(4, 2, 16) 15%,
+      rgba(11, 7, 43, 1) 100%
+    );
+    padding-top: 100px;
+    padding-left: 50px;
+    z-index: 10000;
+    flex-direction: column;
+    justify-content: flex-start;
+    animation: open 0.4s forwards;
+
+    a {
+      color: #fff;
+      font-size: 28px;
+      display: block;
+    }
+
+    svg {
+      display: block;
+      z-index: 10;
+    }
+  }
+
+  svg {
+    position: absolute;
+    z-index: 100;
+    top: 20px;
+    right: 30px;
+    display: none;
   }
 
   a {
@@ -72,12 +111,13 @@
     align-items: center;
     gap: 4px;
     line-height: 1;
-    width: min-content;
     justify-content: center;
+    display: none;
 
     @include breakpoint(tablet) {
+      display: flex;
       flex-direction: row;
-      width: max-content;
+      width: min-content;
       font-size: 16px;
       gap: 6px;
     }
@@ -128,5 +168,15 @@
     .count {
       color: #fff;
     }
+  }
+}
+
+@keyframes open {
+  from {
+    height: 50px;
+  }
+
+  to {
+    height: 100vh;
   }
 }
