--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -28,6 +28,84 @@
     display: flex;
     position: relative;
     z-index: 2;
+
+    .close {
+      position: absolute;
+      z-index: 100;
+      top: 20px;
+      right: 30px;
+      display: none;
+    }
+
+    .misc {
+      display: none;
+    }
+
+    &.mobileMenuOpen {
+      position: absolute;
+      height: calc(100vh + 50px);
+      width: 100vw;
+      top: 0;
+      background: linear-gradient(
+        0deg,
+        rgb(4, 2, 16) 15%,
+        rgba(11, 7, 43, 1) 100%
+      );
+      z-index: 10000;
+      animation: open 0.4s forwards;
+
+      .close {
+        display: block;
+      }
+
+      .colRight {
+        display: none;
+      }
+
+      .colLeft {
+        flex-direction: column;
+        justify-content: space-between;
+        height: 95vh;
+
+        svg {
+          display: none;
+        }
+      }
+
+      .navigation {
+        gap: 30px;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-top: 100px;
+        padding-left: 50px;
+        max-height: 425px;
+      }
+
+      a {
+        color: #fff;
+        font-size: 28px;
+        display: block;
+        opacity: 0;
+        animation: fadeIn 0.4s forwards 0.1s;
+      }
+
+      .misc {
+        display: flex;
+        flex-direction: column;
+        font-size: 18px;
+        border-top: 1px solid #818181;
+        padding-top: 1.5rem;
+        margin: 0 auto;
+        width: 70%;
+        gap: 10px;
+        opacity: 0;
+        animation: fadeIn 0.4s forwards 0.2s;
+
+        a {
+          font-size: 18px;
+        }
+      }
+    }
   }
 
   .colLeft {
@@ -49,54 +127,16 @@
   gap: 0;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   width: 100%;
   height: 50px;
 
-  @include breakpoint(laptop) {
+  @include breakpoint(tablet) {
     gap: 10px;
     width: unset;
     justify-content: space-between;
     flex-direction: row;
     padding: 0;
-  }
-
-  &.mobileMenuOpen {
-    position: absolute;
-    height: calc(100vh + 50px);
-    width: 100vw;
-    gap: 30px;
-    left: calc(-5% - 2px);
-    top: -10px;
-    background: linear-gradient(
-      0deg,
-      rgb(4, 2, 16) 15%,
-      rgba(11, 7, 43, 1) 100%
-    );
-    padding-top: 100px;
-    padding-left: 50px;
-    z-index: 10000;
-    flex-direction: column;
-    justify-content: flex-start;
-    animation: open 0.4s forwards;
-
-    a {
-      color: #fff;
-      font-size: 28px;
-      display: block;
-    }
-
-    svg {
-      display: block;
-      z-index: 10;
-    }
-  }
-
-  svg {
-    position: absolute;
-    z-index: 100;
-    top: 20px;
-    right: 30px;
-    display: none;
   }
 
   a {
@@ -178,5 +218,15 @@
 
   to {
     height: 100vh;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
