--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -43,7 +43,7 @@
 
     &.mobileMenuOpen {
       position: absolute;
-      height: calc(100vh + 50px);
+      max-height: -webkit-fill-available;
       width: 100vw;
       top: 0;
       background: linear-gradient(
@@ -95,7 +95,7 @@
         font-size: 18px;
         border-top: 1px solid #818181;
         padding-top: 1.5rem;
-        margin: 0 auto;
+        margin: 20px auto;
         width: 70%;
         gap: 10px;
         opacity: 0;
