fixed more mobile bugs

--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -65,7 +65,7 @@
       .colLeft {
         flex-direction: column;
         justify-content: space-between;
-        height: 95vh;
+        max-height: -webkit-fill-available;
 
         svg {
           display: none;
