--- a/components/global/ButttonOrganize/styles.module.scss
+++ b/components/global/ButttonOrganize/styles.module.scss
@@ -3,7 +3,7 @@
 .btnOrganize {
   display: flex;
   justify-content: flex-start;
-  padding: 6px 20px;
+  padding: 10px 20px;
   border-radius: 7px;
   cursor: pointer;
   gap: 10px;
@@ -18,7 +18,11 @@
   line-height: 1.1;
   text-transform: capitalize;
   color: #f1e1e0;
-  width: 140px;
+  flex: 1;
+
+  @include breakpoint(tablet) {
+    width: 140px;
+  }
 
   &.selected {
     border: 1px solid #cacaca;
