--- a/components/saint/SaintSummary/styles.module.scss
+++ b/components/saint/SaintSummary/styles.module.scss
@@ -1,4 +1,4 @@
-// import { colors } from '../../../styles/colors'
+@import '../../../styles/breakpoints.scss';
 
 .saintSummary {
   display: inline-block;
@@ -33,7 +33,7 @@
 
     &:hover {
       .btnContent {
-        transform: translateY(-22px);
+        transform: translateY(-23px);
       }
     }
 
@@ -161,7 +161,7 @@
     padding: 3px 15px;
     width: 100%;
     border: 1px solid transparent;
-    height: 25px;
+    height: 30px;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
@@ -172,6 +172,9 @@
 
     .btnContent {
       transition: all 0.2s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
     }
 
     svg {
@@ -181,10 +184,15 @@
 
   .footer {
     height: 50px;
-    padding-bottom: 1rem;
     border-radius: 20px;
     width: 100%;
     bottom: 0;
     z-index: 2;
+    display: flex;
+    gap: 10px;
+
+    @include breakpoint(tablet) {
+      display: block;
+    }
   }
 }
