--- a/components/page/Page/styles.module.scss
+++ b/components/page/Page/styles.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/breakpoints.scss';
+
 .body {
   display: flex;
   justify-content: center;
@@ -5,6 +7,14 @@
   gap: 1rem;
   flex-direction: column;
   align-items: center;
+
+  @include breakpoint(tablet) {
+    margin-bottom: 50px;
+  }
+
+  @include breakpoint(laptop) {
+    margin-bottom: 100px;
+  }
 }
 
 .page {
