--- a/components/saint/ExtraInfo/styles.module.scss
+++ b/components/saint/ExtraInfo/styles.module.scss
@@ -16,14 +16,17 @@
 
   .row {
     display: flex;
+    align-items: flex-start;
 
-    svg {
-      margin-right: 15px;
+    .icon {
+      margin-right: 12px;
+      min-width: 20px;
+      width: 20px;
     }
 
     .data {
       color: var(--violet);
-      font-size: 15px;
+      font-size: 14px;
       font-weight: 600;
     }
   }
