--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,8 @@ h6 {
   display: flex;
   width: auto;
   margin-left: -15px;
+  width: 100%;
+  min-height: 550px;
 }
 .my-masonry-grid_column {
   padding-left: 20px; /* gutter size */
