--- a/components/global/BentoSection/styles.module.scss
+++ b/components/global/BentoSection/styles.module.scss
@@ -100,10 +100,18 @@
     .preview {
       width: 100%;
       display: -webkit-box;
-      -webkit-line-clamp: 16;
+      -webkit-line-clamp: 20;
       -webkit-box-orient: vertical;
       overflow: hidden;
       flex: 1;
+
+      @include breakpoint(tablet) {
+        -webkit-line-clamp: 16;
+      }
+
+      @include breakpoint(laptop) {
+        -webkit-line-clamp: 14;
+      }
 
       h2 {
         font-size: 16px;
@@ -139,9 +147,9 @@
 
   .footer {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    padding: 5px 20px 30px 20px;
     align-items: center;
-    padding: 0 50px 30px 50px;
     background-color: #fff;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -149,6 +157,7 @@
     margin-top: -1px;
 
     @include breakpoint(tablet) {
+      padding: 0 50px 30px 50px;
       justify-content: flex-end;
       margin-top: 0;
     }
