--- a/components/global/SaintDetail/styles.module.scss
+++ b/components/global/SaintDetail/styles.module.scss
@@ -30,5 +30,9 @@
       margin-left: -10px;
       margin-top: 30px;
     }
+
+    @include breakpoint(laptop) {
+      margin-top: 40px;
+    }
   }
 }
