--- a/components/saint/ImageMain/styles.module.scss
+++ b/components/saint/ImageMain/styles.module.scss
@@ -1,10 +1,13 @@
 @import './../../../styles/breakpoints.scss';
 
 .imageContainer {
-  margin: 0 auto;
+  margin-right: auto;
+  padding-left: 15px;
+  margin-bottom: 10px;
 
   @include breakpoint(tablet) {
     margin: unset;
+    padding-left: 0;
   }
 
   .image-global {
