--- a/components/saint/NameTag/styles.module.scss
+++ b/components/saint/NameTag/styles.module.scss
@@ -1,7 +1,6 @@
 @import './../../../styles/breakpoints.scss';
 
 .nameTag {
-  margin-bottom: 15px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -10,6 +9,7 @@
   @include breakpoint(tablet) {
     flex-direction: row;
     align-items: center;
+    margin-bottom: 15px;
   }
 
   .name {
@@ -24,9 +24,10 @@
   }
 
   .info {
-    margin-top: 10px;
+    margin-top: 15px;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 5px;
     margin-bottom: 15px;
 
@@ -36,6 +37,7 @@
 
     @include breakpoint(tablet) {
       margin-bottom: 0;
+      margin-top: 10px;
     }
 
     p {
