--- a/components/saint/PageButton/styles.module.scss
+++ b/components/saint/PageButton/styles.module.scss
@@ -3,22 +3,23 @@
   background: none;
   width: 100%;
   min-width: 175px;
+  font-weight: 600;
 
   &.active {
     background-color: #3187e3;
-    border-radius: 10px;
+    border-radius: 7px;
     color: #fff;
   }
 
   &:hover {
     background-color: #3187e3;
-    border-radius: 10px;
+    border-radius: 7px;
     color: #fff;
   }
 
   &.bio {
-    border: 1px solid var(--gold);
-    border-radius: 10px;
+    border: 1px solid rgb(228, 227, 227);
+    border-radius: 7px;
   }
 
   font-size: 16px;
