--- a/components/global/ScrollUp/styles.module.scss
+++ b/components/global/ScrollUp/styles.module.scss
@@ -1,15 +1,25 @@
+@import '../../../styles/breakpoints.scss';
+
 .btn {
   position: fixed;
-  right: 50px;
-  bottom: 100px;
-  border-radius: 10px;
-  padding: 15px 20px;
+  right: 20px;
+  bottom: 20px;
+  border-radius: 7px;
+  padding: 10px 15px;
   border: none;
   cursor: pointer;
   opacity: 0;
   transition: all 0.2s ease-in-out;
   z-index: 1000;
   box-shadow: -5px 2px 10px 3px rgba(0, 0, 0, 0.2);
+
+  @include breakpoint(tablet) {
+    bottom: 70px;
+    right: 70px;
+    padding: 15px 20px;
+    border-radius: 10px;
+  }
+
 
   &:hover {
     transform: scale(1.05);
