--- a/components/global/ImageGlobal/styles.module.scss
+++ b/components/global/ImageGlobal/styles.module.scss
@@ -26,9 +26,9 @@
       width: 100%;
       border-radius: 12px;
       background: linear-gradient(
-        to right,
-        red,
-        var(--gold)
+        to top,
+        rgb(115, 24, 46),
+        #ccad00
       );
       transform: scale(1.035, 1.025);
       opacity: 1;
