--- a/pages/saints/[slug]/styles.module.scss
+++ b/pages/saints/[slug]/styles.module.scss
@@ -159,7 +159,8 @@
         }
 
         strong {
-          color: #999;
+          color: #888;
+          font-weight: 600;
         }
 
         p {
