--- a/components/saint/SaintSummary/styles.module.scss
+++ b/components/saint/SaintSummary/styles.module.scss
@@ -30,7 +30,7 @@
     transition: all 0.3s ease-in-out;
   }
 
-  &:hover {
+  &:not(.mini):hover {
     &:before {
       transform: scale(1.03, 1.01);
     }
@@ -206,10 +206,16 @@
     }
   }
 
-  &.mini .summary {
-    display: -webkit-box;
-    -webkit-line-clamp: 12;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  &.mini {
+    .summary {
+      display: -webkit-box;
+      -webkit-line-clamp: 12;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+
+    .readMore {
+      display: none;
+    }
   }
 }
