--- a/components/global/SectionHeader/styles.module.scss
+++ b/components/global/SectionHeader/styles.module.scss
@@ -1,8 +1,9 @@
 .sectionHeader {
   h2 {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 700;
   margin-bottom: 20px;
+  line-height: 1.1;
   }
 }
 
