--- a/components/page/Header/styles.module.scss
+++ b/components/page/Header/styles.module.scss
@@ -87,6 +87,10 @@
         display: block;
         opacity: 0;
         animation: fadeIn 0.4s forwards 0.1s;
+
+        &:first-child {
+          padding-left: 10px;
+        }
       }
 
       .misc {
@@ -160,6 +164,10 @@
       width: min-content;
       font-size: 16px;
       gap: 6px;
+    }
+
+    &:first-child {
+      padding-left: 0;
     }
 
     .count {
