--- a/components/saint/SaintSummary/styles.module.scss
+++ b/components/saint/SaintSummary/styles.module.scss
@@ -130,6 +130,10 @@
         margin-left: -4px;
       }
 
+      strong {
+        font-weight: 600;
+      }
+
       ul {
         list-style: none;
         margin: 0;
