--- a/components/saint/SimilarSaints/styles.module.scss
+++ b/components/saint/SimilarSaints/styles.module.scss
@@ -93,6 +93,10 @@
         li {
           display: inline;
           line-height: 1.4;
+
+          strong {
+            font-weight: 600;
+          }
         }
       }
     }
