--- a/components/saint/ReadMoreLinks/styles.module.scss
+++ b/components/saint/ReadMoreLinks/styles.module.scss
@@ -4,7 +4,7 @@
   .title {
     font-size: 14px;
     font-weight: 600;
-    color: var(--violet);
+    color: var(--gold);
     margin-bottom: 5px;
   }
 
