--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,6 @@ dl,
 dd {
   margin: 0;
   text-size-adjust: 100%;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
   font-synthesis: weight;
 }
 
@@ -120,3 +118,8 @@ h6 {
   margin-bottom: 20px;
   border-radius: 20px;
 }
+
+.day-item {
+  margin-bottom: 40px;
+}
+
